--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ repository = "https://github.com/alexobolev/mdbook-xmldoc"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.1.6", features = ["derive"] }
+mdbook = "0.4.27"
+pulldown-cmark = { version = "0.9.2", features = ["simd"] }
+serde = { version = "1.0.152", features = ["derive"] }
+serde_yaml = "0.9.17"
