--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
+compact_str = { version = "0.6.1", features = ["serde"] }
+log = "0.4.17"
 mdbook = "0.4.27"
 pulldown-cmark = { version = "0.9.2", features = ["simd"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_yaml = "0.9.17"
+smallvec = { version = "1.10.0", features = ["serde"] }
