--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ repository = "https://github.com/alexobolev/mdbook-xmldoc"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.23"
 clap = { version = "4.1.6", features = ["derive"] }
 compact_str = { version = "0.6.1", features = ["serde"] }
+fern = { version = "0.6.1", features = ["colored"] }
 log = "0.4.17"
 mdbook = "0.4.27"
 pulldown-cmark = { version = "0.9.2", features = ["simd"] }
