--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ pulldown-cmark = { version = "0.9.2", features = ["simd"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_yaml = "0.9.17"
 smallvec = { version = "1.10.0", features = ["serde"] }
+uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
